[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.7"
clap = "2.34.0"
serde = { version="1.0.132", features=["derive"] }
crossbeam = "0.8.1"
tokio = { version="1.15.0", features=["full"] }
futures = { version="0.3.17" }
skytable = "0.6.2"
libc = "0.2.112"
