[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed = "0.20.4"
fuser = "0.14.0"
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "1.0.207", features = ["derive"] }
crossbeam = "0.8.4"
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
libc = "0.2.155"
